Add dependency page in rk tv
